nu este inca gata

--- a/index.html
+++ b/index.html
@@ -62,7 +62,12 @@
         <div class="hero">
           <h1 class="title">Effective Solutions for Your Business</h1>
           <a-service-btn
-            ><button class="button-service-a-serice-btn" data-modal-open>
+            ><button
+              class="button-service-a-serice-btn"
+              aria-expanded="false"
+              aria-controls="mobile-menu"
+              data-modal-open
+            >
               Order Service
             </button></a-service-btn
           >
