--- a/portofolio.html
+++ b/portofolio.html
@@ -19,211 +19,206 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <body>
-      <header class="top-line">
-        <div class="container top-line-style">
-          <a href="portofolio.html" rel="noopener noreferrer" class="logo"
-            >WEB</a
-          >
-          <nav class="navbar">
-            <ul class="navbar-list">
-              <li>
-                <a href="index.html" class="navbar-list-item index active"
-                  >Studio</a
-                >
-              </li>
-              <li>
-                <a href="portofolio.html" class="navbar-list-item active"
-                  >Portfolio</a
-                >
-              </li>
-              <li>
-                <a href="contacts.html" class="navbar-list-item active"
-                  >Contacts</a
-                >
-              </li>
-            </ul>
-          </nav>
-
-          <ul class="contact">
-            <li>
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-              <a href="tel:110001111111">+11 (000) 111-11-11</a>
-            </li>
-          </ul>
-        </div>
-      </header>
-      <main class="main-body">
-        <div class="buttons">
-          <ul class="filter-butons">
-            <li>
-              <button type="button" class="filter-button-all">All</button>
-            </li>
-            <li>
-              <button type="button" class="filter-button-text">Web site</button>
-            </li>
-            <li>
-              <button type="button" class="filter-button-text">App</button>
-            </li>
-            <li>
-              <button type="button" class="filter-button-text">Design</button>
-            </li>
-            <li>
-              <button type="button" class="filter-button-text">
-                Marketing
-              </button>
-            </li>
-          </ul>
-        </div>
-
-        <section class="row-01">
-          <div class="one-cards-container">
-            <ul>
-              <li class="project1">
-                <div class="overlay-image">
-                  <img
-                    src="./images/appbanking1.jpg"
-                    alt="aplication"
-                    width="360"
-                  />
-                  <div class="overlay">
-                    <p class="overlay-text">Text introdus.</p>
-                  </div>
-                </div>
-                <h3>Banking App Interface Concept</h3>
-                <p>App</p>
-              </li>
-              <li class="project1">
-                <div class="overlay-image">
-                  <img
-                    src="./images/cashless2.jpg"
-                    alt="aplication phone"
-                    width="360"
-                  />
-                  <div class="overlay">
-                    <p class="overlay-text">Text introdus.</p>
-                  </div>
-                </div>
-                <h3>Cashless Payment</h3>
-                <p>Marketing</p>
-              </li>
-
-              <li class="project3">
-                <div class="overlay-image">
-                  <img
-                    src="./images/medidation3.jpg"
-                    alt="meditation"
-                    width="360"
-                  />
-                  <div class="overlay">
-                    <p class="overlay-text">Text introdus.</p>
-                  </div>
-                </div>
-                <h3>Meditation App</h3>
-                <p>App</p>
-              </li>
-            </ul>
-          </div>
-        </section>
-        <section class="row-02">
-          <div class="two-cards-container">
-            <ul>
-              <li class="project4">
-                <div class="overlay-image">
-                  <img
-                    src="./images/taxiservice4.jpg"
-                    alt="service"
-                    width="360"
-                  />
-                  <div class="overlay">
-                    <p class="overlay-text">Text introdus.</p>
-                  </div>
-                </div>
-                <h3>Taxi Service</h3>
-                <p>Marketing</p>
-              </li>
-              <li class="project5">
-                <div class="overlay-image">
-                  <img
-                    src="./images/screenilustration5.jpg"
-                    alt="ilustration"
-                    width="360"
-                  />
-                  <div class="overlay">
-                    <p class="overlay-text">Text introdus.</p>
-                  </div>
-                </div>
-                <h3>Screen Illustrations</h3>
-                <p>Design</p>
-              </li>
-              <li class="project6">
-                <div class="overlay-image">
-                  <img
-                    src="./images/onlinecourses6.jpg"
-                    alt="courses"
-                    width="360"
-                  />
-                  <div class="overlay">
-                    <p class="overlay-text">Text introdus.</p>
-                  </div>
-                </div>
-                <h3>Online Courses</h3>
-                <p>Marketing</p>
-              </li>
-            </ul>
-          </div>
-        </section>
-        <section class="row-03">
-          <div class="thre-cards-container">
-            <ul>
-              <li class="project7">
-                <div class="overlay-image">
-                  <img
-                    src="./images/instagramstories7.jpg"
-                    alt="instagram"
-                    width="360"
-                  />
-                  <div class="overlay">
-                    <p class="overlay-text">Text introdus.</p>
-                  </div>
-                </div>
-                <h3>Instagram Stories Concept</h3>
-                <p>Design</p>
-              </li>
-              <li class="project8">
-                <div class="overlay-image">
-                  <img
-                    src="./images/organicfood8.jpg"
-                    alt="organic"
-                    width="360"
-                  />
-                  <div class="overlay">
-                    <p class="overlay-text">Text introdus</p>
-                  </div>
-                </div>
-                <h3>Organic Food</h3>
-                <p>Web Site</p>
-              </li>
-              <li class="project9">
-                <div class="overlay-image">
-                  <img src="./images/freshcoffe9.jpg" alt="coffe" width="360" />
-                  <div class="overlay">
-                    <p class="overlay-text">text introdus</p>
-                  </div>
-                </div>
-                <h3>Fresh Coffee</h3>
-                <p>Web Site</p>
-              </li>
-            </ul>
-          </div>
-        </section>
-      </main>
-    </body>
   </head>
-</html>
-<!--menu nav-->
+  <body>
+    <header class="top-line">
+      <div class="container top-line-style">
+        <a href="portofolio.html" rel="noopener noreferrer" class="logo">WEB</a>
+        <nav class="navbar">
+          <ul class="navbar-list">
+            <li>
+              <a href="index.html" class="navbar-list-item index active"
+                >Studio</a
+              >
+            </li>
+            <li>
+              <a href="portofolio.html" class="navbar-list-item active"
+                >Portfolio</a
+              >
+            </li>
+            <li>
+              <a href="contacts.html" class="navbar-list-item active"
+                >Contacts</a
+              >
+            </li>
+          </ul>
+        </nav>
+
+        <ul class="contact">
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </div>
+    </header>
+    <main class="main-body">
+      <div class="buttons">
+        <ul class="filter-butons">
+          <li>
+            <button type="button" class="filter-button-all">All</button>
+          </li>
+          <li>
+            <button type="button" class="filter-button-text">Web site</button>
+          </li>
+          <li>
+            <button type="button" class="filter-button-text">App</button>
+          </li>
+          <li>
+            <button type="button" class="filter-button-text">Design</button>
+          </li>
+          <li>
+            <button type="button" class="filter-button-text">Marketing</button>
+          </li>
+        </ul>
+      </div>
+
+      <section class="row-01">
+        <div class="one-cards-container">
+          <ul>
+            <li class="project1">
+              <div class="overlay-image">
+                <img
+                  src="./images/appbanking1.jpg"
+                  alt="aplication"
+                  width="360"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">Text introdus.</p>
+                </div>
+              </div>
+              <h3>Banking App Interface Concept</h3>
+              <p>App</p>
+            </li>
+            <li class="project1">
+              <div class="overlay-image">
+                <img
+                  src="./images/cashless2.jpg"
+                  alt="aplication phone"
+                  width="360"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">Text introdus.</p>
+                </div>
+              </div>
+              <h3>Cashless Payment</h3>
+              <p>Marketing</p>
+            </li>
+
+            <li class="project3">
+              <div class="overlay-image">
+                <img
+                  src="./images/medidation3.jpg"
+                  alt="meditation"
+                  width="360"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">Text introdus.</p>
+                </div>
+              </div>
+              <h3>Meditation App</h3>
+              <p>App</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="row-02">
+        <div class="two-cards-container">
+          <ul>
+            <li class="project4">
+              <div class="overlay-image">
+                <img
+                  src="./images/taxiservice4.jpg"
+                  alt="service"
+                  width="360"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">Text introdus.</p>
+                </div>
+              </div>
+              <h3>Taxi Service</h3>
+              <p>Marketing</p>
+            </li>
+            <li class="project5">
+              <div class="overlay-image">
+                <img
+                  src="./images/screenilustration5.jpg"
+                  alt="ilustration"
+                  width="360"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">Text introdus.</p>
+                </div>
+              </div>
+              <h3>Screen Illustrations</h3>
+              <p>Design</p>
+            </li>
+            <li class="project6">
+              <div class="overlay-image">
+                <img
+                  src="./images/onlinecourses6.jpg"
+                  alt="courses"
+                  width="360"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">Text introdus.</p>
+                </div>
+              </div>
+              <h3>Online Courses</h3>
+              <p>Marketing</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="row-03">
+        <div class="thre-cards-container">
+          <ul>
+            <li class="project7">
+              <div class="overlay-image">
+                <img
+                  src="./images/instagramstories7.jpg"
+                  alt="instagram"
+                  width="360"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">Text introdus.</p>
+                </div>
+              </div>
+              <h3>Instagram Stories Concept</h3>
+              <p>Design</p>
+            </li>
+            <li class="project8">
+              <div class="overlay-image">
+                <img
+                  src="./images/organicfood8.jpg"
+                  alt="organic"
+                  width="360"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">Text introdus</p>
+                </div>
+              </div>
+              <h3>Organic Food</h3>
+              <p>Web Site</p>
+            </li>
+            <li class="project9">
+              <div class="overlay-image">
+                <img src="./images/freshcoffe9.jpg" alt="coffe" width="360" />
+                <div class="overlay">
+                  <p class="overlay-text">text introdus</p>
+                </div>
+              </div>
+              <h3>Fresh Coffee</h3>
+              <p>Web Site</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+
+    <!--menu nav-->
     <footer class="footer-section">
       <div class="container footer-section-style">
         <div class="footer-section-logo">
@@ -316,7 +311,7 @@
         </div>
       </div>
     </footer>
-<script defer src="./js/modal.js"></script>
+    <script defer src="./js/modal.js"></script>
     <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
@@ -325,6 +320,5 @@
       referrerpolicy="no-referrer"
     ></script>
     <script defer src="./mobile-menu/mobile-menu.js.js"></script>
-  
   </body>
 </html>
