--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
       <!-- Features section -->
       <section class="section">
-        <div class="container features">
+        <div class="container-features">
           <ul class="card-set">
             <li>
               <svg class="features-icons">
