--- a/portofolio.html
+++ b/portofolio.html
@@ -24,8 +24,9 @@
     <header class="top-line">
       <div class="container top-line-style">
         <a href="portofolio.html" rel="noopener noreferrer" class="logo">WEB</a>
-        <nav class="navbar">
-          <ul class="navbar-list">
+        <nav>
+          <div class="menu-toggle" id="hamburger-menu">
+          <ul class="nav-menu" id="nav-menu">
             <li>
               <a href="index.html" class="navbar-list-item index active"
                 >Studio</a
@@ -218,6 +219,7 @@
       </section>
     </main>
 
+    <!--menu nav-->
     <!--menu nav-->
     <footer class="footer-section">
       <div class="container footer-section-style">
