am aranjat un pic si in portofolio nu arata bine imaginile

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Studio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,15 +19,15 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-  </head>
+     <title>Web Studio</title>
 
   <body>
     <header class="top-line">
       <div class="container top-line-style">
         <a href="index.html" rel="noopener noreferrer" class="logo">WEB</a>
-        <nav>
-          <div class="menu-toggle" id="hamburger-menu">
-          <ul class="nav-menu" id="nav-menu">
+       <nav class="menu-toggle" id="hamburger-menu">
+          <ul class="nav-menu">
+         
             <li>
               <a href="index.html" class="navbar-list-item index active"
                 >Studio</a
@@ -56,7 +55,6 @@
           </li>
         </ul>
       </div>
-        </div>
     </header>
     <main>
       <!-- Hero section -->
