--- a/portofolio.html
+++ b/portofolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,14 +19,14 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <title>Portfolio</title>
   </head>
   <body>
     <header class="top-line">
       <div class="container top-line-style">
-        <a href="portofolio.html" rel="noopener noreferrer" class="logo">WEB</a>
-        <nav>
-          <div class="menu-toggle" id="hamburger-menu">
-          <ul class="nav-menu" id="nav-menu">
+        <a href="index.html" rel="noopener noreferrer" class="logo">WEB</a>
+        <nav class="menu-toggle" id="hamburger-menu">
+          <ul class="nav-menu">
             <li>
               <a href="index.html" class="navbar-list-item index active"
                 >Studio</a
@@ -55,6 +55,7 @@
         </ul>
       </div>
     </header>
+
     <main class="main-body">
       <div class="buttons">
         <ul class="filter-butons">
@@ -206,7 +207,8 @@
             </li>
             <li class="project9">
               <div class="overlay-image">
-                <img src="./images/freshcoffe9.jpg" alt="coffe" width="360" />
+                <img src="./images/freshcoffe9.jpg"
+                 alt="coffe" width="360" />
                 <div class="overlay">
                   <p class="overlay-text">text introdus</p>
                 </div>
@@ -218,9 +220,9 @@
         </div>
       </section>
     </main>
-
-    <!--menu nav-->
-    <!--menu nav-->
+  </body>
+</html>
+<!--menu nav-->
     <footer class="footer-section">
       <div class="container footer-section-style">
         <div class="footer-section-logo">
