--- a/portofolio.html
+++ b/portofolio.html
@@ -79,7 +79,7 @@
 
       <section class="row-01">
         <div class="one-cards-container">
-          <ul>
+          <ul class="cards-cards-project">
             <li class="project1">
               <div class="overlay-image">
                 <img
@@ -128,7 +128,7 @@
       </section>
       <section class="row-02">
         <div class="two-cards-container">
-          <ul>
+          <ul class="cards-cards-project">
             <li class="project4">
               <div class="overlay-image">
                 <img
@@ -176,7 +176,7 @@
       </section>
       <section class="row-03">
         <div class="thre-cards-container">
-          <ul>
+          <ul class="cards-cards-project">
             <li class="project7">
               <div class="overlay-image">
                 <img
