--- a/portofolio.html
+++ b/portofolio.html
@@ -22,10 +22,102 @@
     <title>Portfolio</title>
   </head>
   <body>
+    <div class="js-menu-container">
+			<button class="menu-toggle js-close-menu">&times;</button>
+			<nav>
+				<ul class="mobile-nav-menu">
+					<li>
+						<a
+							class="mobile-navbar"
+							href="index.html"
+							rel="noopener noreferrer"
+							>Studio</a
+						>
+					</li>
+					<li>
+						<a
+							class="mobile-navbar"
+							href="portfolio.html"
+							target="_parent"
+							rel="noopener nofollow noreferrer"
+							>Portfolio</a
+						>
+					</li>
+					<li>
+						<a
+							class="mobile-navbar"
+							href="contacts.html"
+							target="_blank"
+							rel="noopener nofollow noreferrer"
+							>Contacts</a
+						>
+					</li>
+				</ul>
+			</nav>
+
+			<ul class="mobile-info-contact">
+				<li>
+					<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+				</li>
+				<li>
+					<a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+				</li>
+			</ul>
+
+			<ul class="mobile-links">
+				<li>
+					<a
+						href="https://www.instagram.com/"
+						target="_blank"
+						class="social-icon"
+						aria-label="instagram-link"
+					>
+						<svg>
+							<use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
+						</svg>
+					</a>
+				</li>
+				<li>
+					<a
+						href="https://www.twitter.com/"
+						target="_blank"
+						class="social-icon"
+						aria-label="twitter-link"
+					>
+						<svg>
+							<use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
+						</svg>
+					</a>
+				</li>
+				<li>
+					<a
+						href="https://www.facebook.com/"
+						target="_blank"
+						class="social-icon"
+						aria-label="facebook-link"
+					>
+						<svg>
+							<use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
+						</svg>
+					</a>
+				</li>
+				<li>
+					<a
+						href="https://www.linkedin.com/"
+						target="_blank"
+						class="social-icon"
+						aria-label="linkedin-link"
+					>
+						<svg>
+							<use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
+						</svg>
+					</a>
+				</li>
+			</ul>
+		</div>
     <header class="top-line">
       <div class="container top-line-style">
         <a href="index.html" rel="noopener noreferrer" class="logo">WEB</a>
-        <nav class="menu-toggle" id="hamburger-menu">
           <ul class="nav-menu">
             <li>
               <a href="index.html" class="navbar-list-item index active"
