--- a/index.html
+++ b/index.html
@@ -54,16 +54,14 @@
 					</li>
 				</ul>
 			</nav>
-
-			<ul class="mobile-info-contact">
+<ul class="mobile-info-contact">
 				<li>
 					<a href="mailto:info@devstudio.com">info@devstudio.com</a>
 				</li>
 				<li>
-					<a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+					<a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
 				</li>
 			</ul>
-
 			<ul class="mobile-links">
 				<li>
 					<a
@@ -119,7 +117,7 @@
       <div class="container top-line-style">
         <a href="index.html" rel="noopener noreferrer" class="logo">WEB</a>
        <nav class="nav-menu">
-         
+         <ul>
             <li>
               <a href="index.html" class="navbar-list-item index active"
                 >Studio</a
